Fix hr alignment

--- a/app/assets/stylesheets/_post_projects.css.scss
+++ b/app/assets/stylesheets/_post_projects.css.scss
@@ -79,6 +79,7 @@
 	}
 	hr {
 		margin: 3em auto;
+		display: inherit;
 	}
 }
 
